<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/result"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/resultText"
        app:layout_constraintStart_toStartOf="@+id/resultText"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />


    <TextView
        android:id="@+id/correctAnsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/total_correct_question"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/resultText"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <TextView
        android:id="@+id/correctQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/_10_10"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/correctAnsText"
        app:layout_constraintTop_toBottomOf="@id/correctAnsText" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@drawable/result_bg"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correctAnsText">

        <TextView
            android:id="@+id/totalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_100"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/white" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_cached_24"
        android:drawableTint="@color/white"
        android:text="@string/try_again"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTint="@color/white"
        android:text="@string/home"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#004175"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/streak_img" />

            <TextView
                android:id="@+id/StreakScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="10"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>